# The-G2-Project

./: .gitignore  .gitmodules  README.md
Anton_FreeRTOS_Blink/: CMakeLists.txt  README.md  main.c
Docs/: Anton-document.md  redis-exploring.md  template.md
IoT-Hub-Anton/: README.md  config.env
Photoresistor-Client-Anton/: CMakeLists.txt  README.md  main.c
Sensor-client/: CMakeLists.txt
Sensor-client-2.1/: CMakeLists.txt  FreeRTOSConfig.h  main.c
TcpServer-Anton/: CMakeLists.txt  README.md  server.c
Vicky/: README.md
demo/: CMakeLists.txt
demo/include/: photoresistor.h
demo/src/: main.c
flask_server_cassandra/: Dockerfile  init.sql
flask_server_cassandra/server/: app.py  models.py  requirements.txt  routes.py  seed.py
old/Anton_FreeRTOS_Blink/: CMakeLists.txt
old/Docs/: Anton-document.md
old/IoT-Hub-Anton/: mqtt_subscriber.py
old/Sensor-client/: FreeRTOSConfig.h  main.c
old/Sensor-client-2.1/: README.md
old/TcpServer-Anton/: server.c
old/demo/: README.md
old/demo/src/: CMakeLists.txt  photoresistor.c
old/server_and_client_Cassandra/: readme.md
old/server_and_client_Cassandra/client/plant-client/: package.json
old/server_and_client_Cassandra/client/plant-client/src/: App.js
old/server_and_client_Cassandra/flask_server/server/: routes.py
old/server_and_client_Cassandra/old/server/: package-lock.json  package.json  server.js
server_and_client_Cassandra/: README.md  package-lock.json  readme.md
server_and_client_Cassandra/client/: package.json
server_and_client_Cassandra/client/plant-client/: package-lock.json
server_and_client_Cassandra/client/src/: App.css  App.js  firebase.js
server_and_client_Cassandra/flask_server/: docker-compose.yml  init.sql  readme.md
server_and_client_Cassandra/flask_server/server/: app.py  models.py  requirements.txt
server_and_client_Cassandra/old/: README.md
server_and_client_Cassandra/old/client/: package-lock.json
server_and_client_Cassandra/old/server/The-G2-Project/server_and_client_Cassandra/server/: package.json
server_and_client_Cassandra/python_seed_client/: server_test.py
server_and_client_Cassandra/server/: .gitignore  Dockerfile  docker-compose.yml  server.js
server_and_client_Cassandra/server/The-G2-Project/server_and_client_Cassandra/server/: .dockerignore  Dockerfile  README.md  server.js
